# job

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: deploy-book.yml  test.yml
.sqlx/: query-0816823ba7784f105d62568db8496a39a8470041474201d1fde1ba9def30b6d1.json  query-110dc8dbfee192bc089054f60c6016d545ea0ff884821f0d5bcc3817a2cc099e.json  query-1d59e9ae94dcc3f839133e6a66a18abcc75e674020a9f23843614c26e1a5a9ee.json  query-1fdcc1a3d6eb5107e990f89220e66a69f0e2a665cb3ffc15ab09704fbe190f6d.json  query-26a2b6938894e52a3dfda4be5e27e8690c0990a4fec24e1f38be15d33f1fddf9.json  query-2a71e72cffaeb5d6c892ea89a731c0ce5ecf91493e4012f7bf626aed280b4204.json  query-3dd7b8b5f00c51b3a39204d396c7c218894f26cf6aede055be3ae92a43bcb0ba.json  query-3ec0c5258422d1204620186cf1c003a82915fec6b58331668530bc4a632ab3dd.json  query-4789a3ab73a82713a0eb05720036dfb1d9e25e9668647d5b00adac116ff6ca4d.json  query-52a128669f93a916045b4e0db47d0abad8a01209a062bcd2b88fbed5d9ccdb26.json  query-68ae7bb036fee7ace499bde8319e6d1640df6be78c36fd5ea4210be823887e70.json  query-7a35a336dacf6569f1eb8a840be2d828d95b4b93b69e148b6fb1b4c14bc94b48.json  query-841db9ff1e7321567d90c888616edefcf0be3fe43f0540b51b34dd86f6e282b7.json  query-a85fe8b7a92bf3bfcb215dbaad14de4241380c03e4828ebbb1234130a39db356.json  query-c6cf6fcf0b9eae414ee86c793156e5c3bda42175ebd8f07b5ff54ad49017c203.json  query-ca5230e8247705078d80ff64fc0f19050775e281f5e6aa52e5082d9fa4583d48.json  query-d4526f99c2df33dc37535252a05c351fa0c3ae5d6a540cacb852326d72d2c0c4.json
ci/: pipeline.yml  repipe  values.yml
ci/tasks/: publish-to-crates.sh  update-repo.sh
migrations/: 20250904065521_job_setup.sql  20250905000000_add_cancelled_at.sql  20260316000000_notify_job_completed.sql  20260316000000_unified_job_events_notify.sql  20260330000000_add_parent_job_id.sql
src/: cancellation_tokens.rs  config.rs  current.rs  dispatcher.rs  entity.rs  error.rs  handle.rs  lib.rs  migrate.rs  notification_router.rs  observer.rs  outcome.rs  poller.rs  registry.rs  repo.rs  runner.rs  running_registry.rs  spawner.rs  time.rs  tracker.rs
tests/: helpers.rs  job.rs
