[package]
name = "job"
description = "Async / distributed job runner"
repository = "https://github.com/GaloyMoney/job"
documentation = "https://docs.rs/job"
version = "0.6.3"
license = "Apache-2.0"
edition = "2024"
categories = ["database"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[features]

fail-on-warnings = []
es-entity = []
json-schema = ["dep:schemars", "es-entity/json-schema"]
tokio-task-names = ["tokio/tracing"]

[dependencies]
es-entity = { workspace = true, features = ["tracing-context"] }

async-trait = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

schemars = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }

[workspace.dependencies]

es-entity = "0.10"

anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
derive_builder = "0.20"
tracing = { version = "0.1" }
sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.17", features = ["serde", "v7"] }
futures = "0.3"
rand = "0.9"
schemars = { version = "1.0", features = ["derive", "chrono04", "rust_decimal1"] }
